<resources>
    <string name="app_name">Sports Counter</string>
    <string name="separator">:</string>
    <string name="start">start</string>
    <string name="clear">clear</string>
    <string name="chose_minutes">Choose minutes</string>
    <string name="choose_seconds">Choose seconds</string>
    <string name="ok">OK</string>
    <string name="dig_only">Time should be digits only</string>
    <string name="stop">stop</string>
    <string name="go">go</string>
    <string name="voice">Voice</string>
    <string name="vibro">Vibration</string>
    <string name="settings_voice">set_voice</string>
    <string name="settings_vibro">set_vibro</string>
    <string name="vibro_descr">If this option is enabled, your phone will countdown vibrate when there is 5 seconds left on timer</string>
    <string name="voice_descr">If this option is enabled, your phone will countdown by voice when there is 5 seconds left on timer</string>
    <string name="loading">Loading</string>
    <string name="settings">settings</string>
    <string name="timer">Timer</string>
    <string name="no_files">No files for play. Please turn off and on voice option in settings</string>
    <string name="timer_going">Timer is going…</string>
    <string name="title">Title</string>
    <string name="choose_interval">Choose Interval</string>
    <string name="add">Add</string>
    <string name="count_hint">10</string>
    <string name="sets_of">sets of</string>
    <string name="times">times</string>
    <string name="set">Set %d</string>
    <string name="kg">kg</string>
    <string name="delete">delete</string>
    <string name="default_times">10</string>
    <string name="training">training</string>
    <string name="times_per">times per</string>
    <string name="times_inc_def">1</string>
    <string name="plus">+</string>
    <string name="kg_per">kg per</string>
</resources>
