<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="set"
            type="com.ideas.sportscounter.exercises.create.viewmodel.CreateSetVM"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{set.setNumber}"
            android:textSize="18sp"
            tools:text="Set 1"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/kgEdit"/>

        <EditText
            android:id="@+id/kgEdit"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_times"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:text="@{set.kgCount}"
            app:layout_constraintLeft_toRightOf="@+id/timesText"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/timesEdit"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_times"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:text="@{set.timesCount}"
            android:singleLine="true"
            app:layout_constraintLeft_toRightOf="@+id/textSet"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/timesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/timesEdit"
            android:layout_marginStart="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/timesEdit"/>

        <TextView
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/kgEdit"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/kgEdit"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/kgEdit"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/acc_time"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/times_inc_def"
            android:text="@{set.timesIncrease}"
            android:inputType="numberSigned"
            app:layout_constraintRight_toLeftOf="@+id/training"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/training"/>

        <TextView
            android:id="@+id/timesper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_per"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/acc_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/acc_time"/>

        <EditText
            android:id="@+id/times_inc"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/times_inc_def"
            android:inputType="numberDecimal"
            android:text="@{set.timesPerTraining}"
            app:layout_constraintRight_toLeftOf="@+id/timesper"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/acc_time"/>

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/times_inc"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/times_inc"/>

        <TextView
            android:id="@+id/training_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/acc_time"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/kg_acc_time"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/times_inc_def"
            android:inputType="numberSigned"
            android:text="@{set.kgPerTraining}"
            app:layout_constraintRight_toLeftOf="@+id/training_kg"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/training_kg"/>

        <TextView
            android:id="@+id/kg_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg_per"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/kg_acc_time"
            android:layout_marginEnd="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/kg_acc_time"/>

        <EditText
            android:id="@+id/kg_inc"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/times_inc_def"
            android:text="@{set.kgIncrease}"
            android:inputType="numberDecimal"
            app:layout_constraintRight_toLeftOf="@+id/kg_per"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/kg_acc_time"/>

        <TextView
            android:id="@+id/kg_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/plus"
            app:layout_constraintRight_toLeftOf="@+id/kg_inc"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/kg_acc_time"/>


    </android.support.constraint.ConstraintLayout>
</layout>