<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ideas.sportscounter.R"/>

        <variable
            name="model"
            type="com.ideas.sportscounter.exercises.create.viewmodel.ExerciseHeaderModel"/>
    </data>

    <RelativeLayout
        android:id="@+id/ceh_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ceh_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grid_size_x2"
            android:layout_marginRight="@dimen/grid_size_x2"
            android:layout_marginTop="@dimen/grid_size_x2"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ceh_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{model.title}"
                bind:onTextChanged="@{model::titleChanged}"
                android:hint="@string/title"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ceh_title"
            android:layout_marginLeft="@dimen/grid_size_x2"
            android:layout_marginTop="@dimen/grid_size"
            android:text="@string/choose_interval"
            />

        <TextView
            android:id="@+id/ceh_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ceh_title"
            android:layout_marginRight="@dimen/grid_size_x2"
            android:layout_marginTop="@dimen/grid_size"
            android:maxLength="2"
            style="@style/LargeText"
            android:text="@{model.seconds}"
            bind:onTimeChosed="@{model::secondsChanged}"
            bind:popupText="@{R.string.choose_seconds}"
            tools:text="00"
            />

        <TextView
            android:id="@+id/ceh_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_size"
            style="@style/LargeText"
            android:text="@string/separator"
            android:textAlignment="center"
            android:layout_below="@id/ceh_title"
            android:layout_toLeftOf="@id/ceh_seconds"
            />

        <TextView
            android:id="@+id/ceh_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/ceh_separator"
            android:layout_below="@id/ceh_title"
            android:maxLength="2"
            android:layout_marginTop="@dimen/grid_size"
            style="@style/LargeText"
            android:text="@{model.minutes}"
            bind:onTimeChosed="@{model::minutesChanged}"
            bind:popupText="@{R.string.chose_minutes}"
            tools:text="0"
            />

        <Button
            android:id="@+id/ceh_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceh_seconds"
            android:layout_marginLeft="@dimen/grid_size_x2"
            android:layout_marginTop="@dimen/grid_size_x2"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/white"
            bind:onClick="@{model::addItems}"
            />

        <EditText
            android:id="@+id/ceh_sets_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceh_seconds"
            android:layout_marginLeft="@dimen/grid_size"
            android:layout_marginTop="@dimen/grid_size_x2"
            android:layout_toRightOf="@id/ceh_add"
            android:hint="@string/count_hint"
            android:text="@{String.valueOf(model.setsCount)}"
            bind:onTextChanged="@{model::setsCountChanged}"
            android:inputType="numberDecimal"
            android:maxLength="2"
            />

        <TextView
            android:id="@+id/ceh_sets_text"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceh_seconds"
            android:layout_marginLeft="@dimen/grid_size_half"
            android:layout_marginTop="@dimen/grid_size_x3"
            android:layout_toRightOf="@id/ceh_sets_count"
            android:text="@string/sets_of"
            />

        <EditText
            android:id="@+id/ceh_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceh_seconds"
            android:layout_marginLeft="@dimen/grid_size"
            android:layout_marginTop="@dimen/grid_size_x2"
            android:layout_toRightOf="@id/ceh_sets_text"
            android:text="@{String.valueOf(model.timesCount)}"
            bind:onTextChanged="@{model::timesCountChanged}"
            android:hint="@string/count_hint"
            android:inputType="numberDecimal"
            android:maxLength="2"
            />

        <TextView
            android:id="@+id/ceh_times_text"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ceh_seconds"
            android:layout_marginLeft="@dimen/grid_size_half"
            android:layout_marginTop="@dimen/grid_size_x3"
            android:layout_toRightOf="@id/ceh_times"
            android:text="@string/times"
            />
    </RelativeLayout>
</layout>